# ss

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  executor.cc  executor.h  input.cc  input.h  main.cc  parser.cc  parser.h  prompt.h
